traces/bug_237.txt
src/medit/medit.c:229: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


src/medit/medit.c:229:7: Write of unused value
227.         ret  = loadMesh_popen_bin(mesh);
228.       else
229.         ret  = loadMesh_popen(mesh);
             ^
230.   
231.       /* compute mesh box */  
